--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="row service-item">    
 
                 <div class="col-md-4 text-center hidden-xs">
-                    <img src="img/ipad.png">
+                    <img src="img/iPad.png">
                 </div>
                 <div class="col-md-4 col-md-offset-3">
                     <div class="service-item text-center">
